<resources>
    <string name="app_name">Book+</string>
    <string name="button_cancel">Cancel</string>
    <string name="cancel_button">Cancel</string>
    <string name="login_button">Login</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="logo_content_description">Bookplus</string>
    <string name="book_name">Book name</string>
    <string name="book_description">Descrição</string>
    <string name="page_count">Número de páginas:</string>
    <string name="no_search_term">Digite um termo para pesquisa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_teste">TesteActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="book_author">Book author</string>
    <string name="release_date">Ano de lançamento:</string>
    <string name="author">Autor:</string>
    <string name="no_user">Informe um usuário válido</string>
    <string name="categories_error">Escolha três categorias</string>
    <string name="preview">Preview</string>
    <string name="buy">Comprar</string>
    <string name="favorite_books">Seus Livros Favoritos</string>
    <string name="no_book_found">Nenhum livro encontrado</string>
    <string name="book_search">Pesquise seu Livro</string>
    <string name="search_field">Pesquise por uma palavra chave...</string>
    <string name="user_invalided">E-mail ou senha inválido</string>
    <string name="user_created">Usuário criado com sucesso</string>
    <string name="error_created_account">Erro na criação de conta</string>
    <string name="error_name_field_empty">Preencha o campo</string>
    <string name="error_created_account_empty">Por favor, preencha todos os campos</string>
    <string name="error_created_account_user_existent">E-mail já cadastrado</string>
    <string name="error_created_account_password_invalided">A senha necessita no mínimo 6 caracters</string>
    <string name="error_login_no_user">Usuário não cadastrado</string>
    <string name="error_generic_login">Houve um erro ao fazer login</string>
    <string name="error_generic_created">Houve um erro ao criar a conta</string>
    <string name="error_email_format">Formato do e-mail inválido</string>
    <string name="no_conection">Por favor, verifique sua conexão com a internet</string>

</resources>