<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.BookDetailsFragment"
    android:padding="30dp"
    >

    <ImageView
        android:id="@+id/bookImageView"
        android:layout_width="144dp"
        android:layout_height="214dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/no_cover_thumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bookTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/bookImageView"
        android:hint="@string/book_name"
        android:textSize="16dp"
        android:fontFamily="sans-serif-black"
        />

    <TextView
        android:id="@+id/authorLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/bookTitleTextView"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/author"
        android:fontFamily="sans-serif-black"
        android:textSize="12dp"/>



    <TextView
        android:id="@+id/bookAuthorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/bookTitleTextView"
        app:layout_constraintStart_toEndOf="@id/authorLabelTextView"
        android:hint="@string/book_author"
        android:fontFamily="sans-serif-black"
        android:textSize="12dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/additionalInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/bookAuthorTextView">

            <TextView
                android:id="@+id/labelPageCountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/page_count"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/pageCountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/labelPageCountTextView"
                android:hint="0"/>

            <TextView
                android:id="@+id/labelReleaseDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelPageCountTextView"
                android:hint="@string/release_date" />

            <TextView
                android:id="@+id/releaseDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/labelReleaseDateTextView"
                app:layout_constraintTop_toBottomOf="@id/pageCountTextView"
                android:hint="0000" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/labelBookDescriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/additionalInfoLayout"
        android:hint="@string/book_description"
        android:textSize="16dp"
        android:fontFamily="sans-serif-black"
        />

    <TextView
        android:id="@+id/bookDescriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/labelBookDescriptionTextView"
        android:hint="@string/book_description"
        android:textSize="16dp"
        android:fontFamily="sans-serif-black"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonFinish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="finish"/>



</androidx.constraintlayout.widget.ConstraintLayout>